# medoru

./: .gitignore  AGENTS.md  Dockerfile.build  LESSON_GENERATION.md  LOGGING.md  README.md  RELEASE.md  WORD_SEEDING.md  db_schema_for_analysis.md  mix.exs  test_cache_check.exs  test_debug.exs  test_debug2.exs  test_mite.exs  test_noun_cache.exs  test_single_slot.exs  test_three_verbs.exs  test_two_slots.exs  test_validator_perf.exs  test_validator_perf2.exs  translate.exs  translate_batch_1.exs  translate_kanji.py
data/: .gitignore  INDEX.md  PRODUCTION_RESTORE.md  README.md  anki.txt  anki2.txt  lessons_schema.sql  medoru_prod_ready.dump  pyproject.toml  requirements-dev.txt  requirements.txt  restore_production.sh  restore_to_prod.sh  sample_core6000.tsv  schema.sql  schema_clean.sql  school_level_mapping.json  test_n5.json  v7_lesson_pool_organized.json
data/data/seeds/: kanji_n4.json
data/export/: TRANSLATION_WORKFLOW.md  kanji.json  kanji_bg.json  kanji_ja.json  lessons.json  lessons_bg.json  n3_nllb_progress.json  n3_to_translate.json  words_n4.json  words_n4_bg.json  words_n4_progress.json  words_n5.json  words_n5_bg.json  words_n5_sample_translated.json
data/milestones/: M1-kanjivg.md  M3-kanji-data.md  M5-radicals.md  M6-jmdict.md
data/prod_dump/: 02_kanji_readings.csv  05_lessons.csv  07_lesson_words.csv  08_tests.csv  09_test_steps.csv  10_lesson_test_ids.csv  RESTORE.md  restore.sh
data/scripts/: README.md  translate_bg.py  translate_ja.py  translate_resumable.py  translate_with_kimi.sh
data/spiders/: README.md
data/src/medoru_data/: __init__.py  (+2 more)
(+628 files in other folders)
